@@ -3,9 +3,13 @@ body{
 
     background-color: rgb(45, 47, 49);
     color: white;
+    user-select: none;
 }
 
 canvas {
+    object-fit: contain;
+    max-width: 100%;
     width: 100%;
+    max-height: 100vh;
     height: 100%;
 }
