@@ -1,3 +1,10 @@
+---------------Version 1.1.3 Alpha---------------
+    -Fixed canvas going off page vertically
+    -Fixed spacebar scrolling page downward
+    -Added a kick attack that doesn't work
+
+~not-the 9/24/2022
+
 ---------------Version 1.1.2 Alpha---------------
     -sprites now render pixelated
     -canvas scales to fit page
